<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Data">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="#66246424"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/plantiful"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/data_header"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/data"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/button_reset"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:onClick="buttonReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/reset" />

    <ImageView
        android:id="@+id/logo_data"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/data_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".95"
        app:srcCompat="@drawable/plant" />

    <TextView
        android:id="@+id/reset_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_data"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_reset"
        app:layout_constraintStart_toStartOf="@+id/button_reset"
        app:layout_constraintTop_toBottomOf="@+id/button_reset" />

    <Button
        android:id="@+id/back_button_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="buttonBack"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logo_data"
        app:layout_constraintEnd_toStartOf="@+id/logo_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo_data" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:onClick="buttonExport"
        app:layout_constraintBottom_toTopOf="@+id/textView44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_header"
        app:srcCompat="@drawable/export" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_data"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <SurfaceView
        android:id="@+id/webconnect"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_header"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_sync"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/webconnect"
        app:layout_constraintStart_toStartOf="@+id/webconnect"
        app:layout_constraintTop_toBottomOf="@+id/webconnect" />

</androidx.constraintlayout.widget.ConstraintLayout>